--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 .heading {
-    color: orange;
-    background-color: green;
-    font-size: large;
+    color: blue;
+    background-color: violet;
+    font-size: 100px;
 }
